--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,53 +1,74 @@
 {
-  "Rename Photos": "图片重命名工具 Rename Photos",
-
-  "Ok": "好的",
-  "System Error": "系统错误",
-
-  "Open Folder": "打开文件夹",
-  "Open Folder Error": "打开文件夹出错",
-  "Read Folder Error": "读取文件夹出错",
-  "Drop Files": "拖放文件",
-  "Read Files Error": "读取文件出错",
-  "Rename": "重命名",
-  "Rename Success!": "重命名成功！",
-  "Rename Files Error": "重命名出错",
-  "No need to perform renaming": "无需执行重命名操作",
-  "Unknown image format": "未知图片格式",
-  "Missing EXIF data": "EXIF 数据缺失",
-  "Filename": "文件名",
-  "New Filename": "新文件名",
-
-  "File Size": "文件大小",
-  "Date Created": "创建日期",
-
-  "EXIF Information": "EXIF 信息",
-  "Date": "拍摄日期",
-  "Make": "制造商",
-  "Camera": "相机",
-  "Lens": "镜头",
-  "FocalLength": "焦距",
-  "Aperture": "光圈",
-  "Shutter": "快门",
-  "ISO": "ISO",
-
-  "Settings": "设置",
-  "Language": "语言",
-  "EXIF Mode": "EXIF模式",
-  "If enabled, only rename files with EXIF data.": "只处理含有 EXIF 数据的文件",
-  "Use Created Date": "使用创建日期",
-  "When enabled, date variables use the file creation date rather than the EXIF date.": "开启此选项后，日期变量会以文件创建日期为准，而非 EXIF 日期。",
-  "Help": "帮助",
-  "1. Select a folder or drag and drop files": "1. 选择文件夹或者直接拖拽文件",
-  "Selected files will be displayed in the table.": "选中的文件会显示在表格中。",
-  "2. Enter the rename rule": "2. 输入重命名规则",
-  "The variables listed below are supported, and you can preview the expected new name in the table.": "下方列举了支持的变量，你可以在表格中预览预期的新文件名",
-  "3. Click `Rename` button to change names": "3. 点击`重命名`按钮执行修改操作",
-  "About": "关于",
-  "Check for Updates": "检查更新",
-  "New version v{{version}} detected, will automatically install after download.": "检测到新版本 v{{version}}，下载完成后将会自动安装更新。",
-  "There are currently no updates available.": "当前没有可用的更新。",
-  "This software is completely free and open source on Github.": "软件完全免费并在 Github 开源。",
-  "If you find this tool helpful, you can": "如果您觉得这个工具对您有所帮助，您可以",
-  "star this project": "在 Github 点下收藏⭐"
+  "app": {
+    "name": "图片重命名工具 Rename Photos"
+  },
+  "common": {
+    "ok": "好的",
+    "dropFiles": "拖放文件"
+  },
+  "buttons": {
+    "openFolder": "打开文件夹",
+    "rename": "重命名"
+  },
+  "errors": {
+    "system": "系统错误",
+    "openFolder": "打开文件夹出错",
+    "readFolder": "读取文件夹出错",
+    "readFiles": "读取文件出错",
+    "renameFiles": "重命名出错",
+    "unknownImageFormat": "未知图片格式",
+    "missingExifData": "EXIF 数据缺失"
+  },
+  "notifications": {
+    "noRename": "无需执行重命名操作",
+    "renameSuccess": "重命名成功！"
+  },
+  "table": {
+    "filename": "文件名",
+    "newFilename": "新文件名",
+    "fileSize": "文件大小",
+    "dateCreated": "创建日期"
+  },
+  "exif": {
+    "title": "EXIF 信息",
+    "date": "拍摄日期",
+    "make": "制造商",
+    "camera": "相机",
+    "lens": "镜头",
+    "focalLength": "焦距",
+    "aperture": "光圈",
+    "shutter": "快门",
+    "iso": "ISO"
+  },
+  "settings": {
+    "title": "设置",
+    "language": "语言",
+    "exif": {
+      "title": "EXIF 模式",
+      "tooltip": "只处理含有 EXIF 数据的文件"
+    },
+    "creationDate": {
+      "title": "使用创建日期",
+      "tooltip": "开启此选项后，日期变量会以文件创建日期为准，而非 EXIF 日期。"
+    },
+    "help": "帮助",
+    "about": "关于",
+    "checkForUpdates": "检查更新"
+  },
+  "helpDoc": {
+    "step1Title": "1. 选择文件夹或者直接拖拽文件",
+    "step1Desc": "选中的文件会显示在表格中。",
+    "step2Title": "2. 输入重命名规则",
+    "step2Desc": "下方列举了支持的变量，你可以在表格中预览预期的新文件名",
+    "step3Title": "3. 点击`重命名`按钮执行修改操作"
+  },
+  "updates": {
+    "newVersion": "检测到新版本 v{{version}}，下载完成后将会自动安装更新。",
+    "noUpdates": "当前没有可用的更新。"
+  },
+  "about": {
+    "freeAndOpen": "软件完全免费并在 Github 开源。",
+    "ifHelpful": "如果您觉得这个工具对您有所帮助，您可以",
+    "starProject": "在 Github 点下收藏⭐"
+  }
 }
