--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,8 +49,7 @@
       "tooltip": "When enabled, date variables use the file creation date."
     },
     "help": "Help",
-    "about": "About",
-    "checkForUpdates": "Check for Updates"
+    "about": "About"
   },
   "helpDoc": {
     "step1Title": "1. Select a folder or drag and drop files",
@@ -58,10 +57,6 @@
     "step2Title": "2. Enter the rename rule",
     "step2Desc": "The variables below are supported, and you can preview the resulting names in the table.",
     "step3Title": "3. Click Rename to change names"
-  },
-  "updates": {
-    "newVersion": "New version v{{version}} detected, will automatically install after download.",
-    "noUpdates": "No updates are available right now."
   },
   "about": {
     "freeAndOpen": "This software is completely free and open source on Github.",
