--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -49,8 +49,7 @@
       "tooltip": "开启此选项后，日期变量会以文件创建日期为准。"
     },
     "help": "帮助",
-    "about": "关于",
-    "checkForUpdates": "检查更新"
+    "about": "关于"
   },
   "helpDoc": {
     "step1Title": "1. 选择文件夹或者直接拖拽文件",
@@ -58,10 +57,6 @@
     "step2Title": "2. 输入重命名规则",
     "step2Desc": "下方列举了支持的变量，你可以在表格中预览预期的新文件名。",
     "step3Title": "3. 点击“重命名”按钮执行修改"
-  },
-  "updates": {
-    "newVersion": "检测到新版本 v{{version}}，下载完成后将会自动安装更新。",
-    "noUpdates": "当前没有可用的更新。"
   },
   "about": {
     "freeAndOpen": "软件完全免费并在 GitHub 开源。",
